finish up pledge

--- a/resources/assets/less/_boot.less
+++ b/resources/assets/less/_boot.less
@@ -1,9 +1,12 @@
 /* Library */
 @import (less) "bootstrap/less/bootstrap.less";
 @import (less) "font-awesome/less/font-awesome.less";
-
+@import (less) "animate.css/animate.min.css";
+@import (less) "toastr/toastr.less";
 /* Variables */
 @import (less) "_variables.less";
-
+/* Fonts */
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin,cyrillic-ext");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
 /* App Specific */
 @import (less) "app.less";
