--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -138,6 +138,16 @@ header {
   }
 }
 
+.lj-logo {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.4em;
+}
+
+.lg-num-pledges {
+  margin-left: 10px;
+  color: #ed5565;
+}
+
 .lj-overlay {
   width: 100%;
   height: 100%;
